--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
    </ul></nav>
  <section>
    <h2>자바스크립트 실행합니다</h2>
-    <sctipt>fnTest();</script>
+    <script>fnTest();</script>
  </section>
  <footer>
   <p>＆copy; 20XX Made by korea. All rights reserved.</p></footer>
