--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
  body {font-family: Verdana, sans-serif; font-size:0.8em;}
  header, nav, section, article, footer.
  {border:1px solid gray; margin:5px; padding:8px;}
- section#displayArea{ height:210px; }
+ section#displayArea{height:210px;}
  nav ul {margin:0; padding:0;}
  nav ul li {display:inline; margin:5px;}
  a {text-decoration:none;}
@@ -34,6 +34,6 @@
     <script>fnTest();</script>
  </section>
  <footer>
-  <p>＆copy; 20XX Made by korea. All rights reserved.</p></footer>
+  <p>&copy; 20XX Made by korea. All rights reserved.</p></footer>
 </body> 
 </html>
