--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <!--   index4.html   -->
+<!doctype html> <!--   index.html   -->
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
