--- a/2018.03.15/1.html
+++ b/2018.03.15/1.html
@@ -4,6 +4,8 @@
  <meta charset="utf-8"/>
  <meta name="viewport"content="width=device-width,initial-scale=1">
  <style>
+  body.user_class_1{font-style:italic;}
+ <style>
  <link rel="stylesheet" href="../css/sample.css"/>
  <script>
  function myFunction(){
