--- a/2018.03.15/1.html
+++ b/2018.03.15/1.html
@@ -2,14 +2,14 @@
 <html lang="ko">
 <head>
  <meta charset="utf-8"/>
- <meta name="viewport"content="width=device-width,initial-scale=1">
+ <meta name="viewport" content="width=device-width,initial-scale=1">
  <style>
   body.user_class_1{font-style:italic;}
  <style>
  <link rel="stylesheet" href="../css/sample.css"/>
  <script>
  function myFunction(){
-  document.getElementById("user_id_1").innerHTML="무궁화 삼천리화려강산"
+  document.getElementByld("user_id_1").innerHTML="무궁화 삼천리화려강산"
 }
 </script>
  <meta name="description"content="HTML5test페이지"/>
