--- a/2018.03.29/advspan.html
+++ b/2018.03.29/advspan.html
@@ -2,9 +2,9 @@
 <html lang="ko">
 <head><meta charset="utf-8"/><meta name="viewport"content="width=device-width,initial-scale=1"/>
 <style>
-div#divsion1{border:solid 1px blue; color:blue; height:100px; width:600px; float:left;}
-div#divsion2{border:solid 1px red; color:red; height:100px; width:300px; float:left;}
-div#divsion3{border:solid 1px blue; color:blue; height:100px; width:300px; float:both;}
+div#division1{border:solid 1px blue; color:blue; height:100px; width:600px; float:left;}
+div#division2{border:solid 1px red; color:red; height:100px; width:300px; float:left;}
+div#division3{border:solid 1px blue; color:blue; height:100px; width:300px; float:both;}
 </style>
 <title>div 학습</title>
 </head>
