--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <ul >
 <li>2018년03월14일
 <ol >
- <li>10.html</li>
- <li>11.html</li>
- <li>basic.html</li>
+ <li><a href="https://xogus9118.girhub.io/2018.03.14/10.html" target="_blank">10.html</a></li>
+ <li><a href="https://xogus9118.girhub.io/2018.03.14/11.html" target="_blank">11.html</a></li>
+ <li><a href="https://xogus9118.girhub.io/2018.03.14/basic.html" target="_blank">basic.html</a></li>
 </ol>
  </li>
 <li>2018년03월15일
