--- a/2018.03.28/advTable3.html
+++ b/2018.03.28/advTable3.html
@@ -4,7 +4,13 @@
 <style> table, tr, th ,td{
   border:1px solid black;  border-collapse:collapse;
 }
-  .subject1{background-color:lightred}
+ .subject1{background-color:red; }
+ .subject2{background-color:blue;}
+ .subject3{background-color:pink;}
+ .subject4{background-color:green;}
+ .subject5{background-color:yellow;}
+ .subject6{background-color:orange;}
+
 </style> <!-- border-collapse:collapse 단선으로,반대는 separate -->
 <title>HTML5테이블 테스트 실습</title>
 </head>
@@ -15,19 +21,16 @@
   <tr><th>시간</th><th>월요일</th><th>화요일</th><th>수요일</th><th>목요일</th><th>금요일</th></tr>
  </thead>
  <tbody>
- <tr><td>9</td><td>-</td><td>-</td><td rowspan="2">자료구조및실습</td><td>-</td><td>-</td></tr>
+ <tr><td>9</td><td>-</td><td>-</td><td rowspan="2" class="subject1">자료구조및실습</td><td>-</td><td>-</td></tr>
  <tr><td>10</td><td>-</td><td>-</td><td>-</td><td>-</td></tr>
- <tr><td>11</td><td rowspan="2">디지털논리회로</td><td rowspan="2">자료구조및실습</td><td>-</td><td>-</td><td>-</td></tr>
-<tr><td>12</td><td>-</td><td>-</td><td rowspan="3">서양현대사</td></tr>
-<tr><td>1</td><td>-</td><td>디지털논리회로</td><td>-</td><td rowspan="2">인터넷프로그래밍</td></tr>
-<tr><td>2</td><td>-</td><td rowspan="4">C++프로그래밍</td><td>-</td></tr>
-<tr><td>3</td><td>-</td><td>-</td><td rowspan="2">캠퍼스멘토링</td><td>-</td></tr>
-<tr><td>4</td><td>-</td><td rowspan="2">인터넷프로그래밍</td><td>-</td></tr>
+ <tr><td>11</td><td rowspan="2" class="subject2">디지털논리회로</td><td rowspan="2" class="subject1">자료구조및실습</td><td>-</td><td>-</td><td>-</td></tr>
+<tr><td>12</td><td>-</td><td>-</td><td rowspan="3" class="subject4">서양현대사</td></tr>
+<tr><td>1</td><td>-</td><td class="subject2">디지털논리회로</td><td>-</td><td rowspan="2" class="subject3">인터넷프로그래밍</td></tr>
+<tr><td>2</td><td>-</td><td rowspan="4" class="subject6">C++프로그래밍</td><td>-</td></tr>
+<tr><td>3</td><td>-</td><td>-</td><td rowspan="2" class="subject5">캠퍼스멘토링</td><td>-</td></tr>
+<tr><td>4</td><td>-</td><td rowspan="2" class="subject3">인터넷프로그래밍</td><td>-</td></tr>
 <tr><td>5</td><td>-</td><td>-</td><td>-</td></tr>
 <tr><td>6</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-</td></tr>
  </tbody>
-<tfoot>
- <tr><td>합계</td><td>1910.91</td><td>1539만</td><td>-</td><td>-</td><tr>
- </tfoot>
 </table> 
 </dody></html>
