--- a/index.html
+++ b/index.html
@@ -10,42 +10,42 @@
 <ul >
 <li>2018년03월14일
 <ol >
- <li><a href="https://xogus9118.girhub.io/2018.3.14/10.html" target="_blank">10.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.3.14/11.html" target="_blank">11.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.3.14/basic.html" target="_blank">basic.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.3.14/10.html" target="_blank">10.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.3.14/11.html" target="_blank">11.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.3.14/basic.html" target="_blank">basic.html</a></li>
 </ol>
  </li>
 <li>2018년03월15일
 <ol >
- <li><a href="https://xogus9118.girhub.io/2018.03.15/1.html" target="_blank">1.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.15/2.html" target="_blank">2.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.15/korea.html" target="_blank">korea.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.15/1.html" target="_blank">1.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.15/2.html" target="_blank">2.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.15/korea.html" target="_blank">korea.html</a></li>
 </ol>
  </li>
 <li>2018년03월21일
 <ol >
- <li><a href="https://xogus9118.girhub.io/2018.03.21/basicChar.html" target="_blank">basicChar.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.21/basicHeading.html" target="_blank">basicHeading.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.21/basicPBrHr.html" target="_blank">basicPBrHr.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.21/basicPBrHr2.html" target="_blank">basicPBrHr2.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.21/basicPBrHr4.html" target="_blank">basicPBrHr4.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.21/basicChar.html" target="_blank">basicChar.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.21/basicHeading.html" target="_blank">basicHeading.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.21/basicPBrHr.html" target="_blank">basicPBrHr.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.21/basicPBrHr2.html" target="_blank">basicPBrHr2.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.21/basicPBrHr4.html" target="_blank">basicPBrHr4.html</a></li>
 </ol>
  </li>
  <li>2018년03월22일
 <ol >
- <li><a href="https://xogus9118.girhub.io/2018.03.22/basicList.html" target="_blank">basicList.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.22/basicList1.html" target="_blank">basicList1.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.22/basicList2.html" target="_blank">basicList2.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.22/basicDist.html" target="_blank">basicDist.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.22/basicList.html" target="_blank">basicList.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.22/basicList1.html" target="_blank">basicList1.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.22/basicList2.html" target="_blank">basicList2.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.22/basicDist.html" target="_blank">basicDist.html</a></li>
 </ol>
 </li>
 <li>2018년03월28일
 <ol>
- <li><a href="https://xogus9118.girhub.io/2018.03.28/advTable.html" target="_blank">advTable.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.28/advTable3.html" target="_blank">advTable3.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.28/basicTable1.html" target="_blank">basicTable1.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.28/basicTable2.html" target="_blank">basicTable2.html</a></li>
- <li><a href="https://xogus9118.girhub.io/2018.03.28/basicTable3.html" target="_blank">basicTable3.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.28/advTable.html" target="_blank">advTable.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.28/advTable3.html" target="_blank">advTable3.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.28/basicTable1.html" target="_blank">basicTable1.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.28/basicTable2.html" target="_blank">basicTable2.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.03.28/basicTable3.html" target="_blank">basicTable3.html</a></li>
 </ol> 
 </li>
   </ul><hr/>
