--- a/2018.04.04/YAAAAA.html
+++ b/2018.04.04/YAAAAA.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <figure>
- <j3>SNS사이트</h3>
+ <h3>SNS사이트</h3>
  <a href=http://www.google.com>
    <img src="../images/googlePlus.png"alt="구글"/><br/>
    <figcaption>(그림)구글링크</figcaption>
