--- a/2018.04.04/YAAAAA1.html
+++ b/2018.04.04/YAAAAA1.html
@@ -9,15 +9,15 @@
 <figure>
  <h3>SNS사이트</h3>
  <a href=http://www.google.com>
-   <img src="../images/googlePlus.png"alt="구글"/><br/>
+   <img src="..xogus9118.github.io/2018.04.04/googlePlus.png"alt="구글"/><br/>
    <figcaption>(그림)구글링크</figcaption>
  </a>
  <a href=http://www.facebook.com>
-   <img src="../images/facebookOne.png"alt="페이스북"/><br/>
+   <img src="..xogus9118.github.io/2018.04.04/facebookOne.png"alt="페이스북"/><br/>
    <figcaption>(그림)페이스북링크</figcaption>
  </a>
  <a href=http://www.twitter.com>
-   <img src="../images/twitterYou.png"alt="트위터"/><br/>
+   <img src="..xogus9118.github.io/2018.04.04/twitterYou.png"alt="트위터"/><br/>
    <figcaption>(그림)트워터링크</figcaption>
  </a>
 </figure>
