--- a/2018.04.04/qz1.html
+++ b/2018.04.04/qz1.html
@@ -13,7 +13,7 @@
    <figcaption>(그림)구글링크</figcaption>
  </a>
  <a href=http://www.facebook.com>
-   <img src="..2018.04.04/facebookOne.png"alt="페이스북"/><br/>
+   <img src="../2018.04.04/facebookOne.png"alt="페이스북"/><br/>
    <figcaption>(그림)페이스북링크</figcaption>
  </a>
  <a href=http://www.twitter.com>
