--- a/2018.04.12/낚시.html
+++ b/2018.04.12/낚시.html
@@ -5,7 +5,7 @@
 <title>폼 학습</title></head>
 <body>
 <section>
-<form action="http://hive.dju.ac.kr/~drkdhong/html5/formCheckbox1.jsp"method="post">
+<form action="http://jsp.dju.ac.kr/~kdhongx/ex/formCheckbox1.jsp"method="post">
 <fieldset>
   <legend>취미선택</legend>
   <label for="fishing">낚시</label>
