--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
    <li><a href="https://xogus9118.github.io/2018.04.12/이메일.html" target="_blank">이메일.html</a></li>
    <li><a href="https://xogus9118.github.io/2018.04.12/정보검색.html" target="_blank">정보검색.html</a></li>
   <li><a href="https://xogus9118.github.io/2018.04.12/최단시간.html" target="_blank">최단시간.html</a></li>
+ <li>2018년04월18일
+ <ol>
+ <li><a href="https://xogus9118.github.io/2018.04.18/실습.html" target="_blank">실습.html</a></li>
+ <li><a href="https://xogus9118.github.io/2018.04.18/textarea2.html" target="_blank">textarea2.html</a></li> 
   </ul><hr/>
 </body>
 </html>
