--- a/2018.04.19/basicSemanticMember2.html
+++ b/2018.04.19/basicSemanticMember2.html
@@ -26,13 +26,13 @@
 
 <body>
 <header>
-  <h2><a href="https://rlawog.github.io/20180419/basicSemantic4.html">실습을환영합니다</a></h2>
+  <h2><a href="https://rlawog.github.io/2018.04.19/basicSemantic4.html">실습을환영합니다</a></h2>
   <ul id="headMenu">
    <li>로그인|</li>
-   <li><a href="https://rlawog.github.io/20180419/basicSemanticMember1.html">회원가입</a>|<li>
+   <li><a href="https://rlawog.github.io/2018.04.19/basicSemanticMember1.html">회원가입</a>|<li>
    <li>사이트맵</li>
    </ul>
-   <img src="../20180404/scene.png"alt="히말라야"/>
+   <img src="../2018.04.04/scene.png"alt="히말라야"/>
    </header>
   <nav>
     <ul>
@@ -91,14 +91,3 @@
 </footer>
 </body>
 </html>
-<aside>
-  <ul>
-   <li><a href=https://www.google.com><img src="../20180404/googlePlus.png" alt="구글"/></a></li>
-   <li><a href=https://www.facebook.com><img src="../20180404/facebookOne.png" alt="페이스북"/></a></li>
-  <li><a href=https://www.twitter.com><img src="../20180404/twitterYou.png" alt="트위터"/></a></li>
- </ul>
-</aside>
-<footer>
- <p>&copy;20XX Made by Korea. All rights reserved.</p>
-</footer>
-</body>
