--- a/2018.04.19/basicSemantic4.html
+++ b/2018.04.19/basicSemantic4.html
@@ -42,7 +42,7 @@
   <li><a href="http://www.w3.org/TR/html5/" target="_blank">HTML5</a></li>
   <li><a href="http://jquery.com/" target="_blank">jQuery</a></li>
   <li><a href="http://jquerymobile.com/" target="_blank">jQueryMobile</a></li>
-  <li><a href="../jsp/jspintro.html">JSP</a></li></ul>
+  <li><a href="../2018.04.19/jspintro.html">JSP</a></li></ul>
 </nav>
 <section>
  <section>
